Updating job title

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profile_pic.png" alt="" /></a>
 					<h1><strong>Emile Gill</strong><br />
-					Data Analyst @ Accor <br />
-					BSc Physics, Imperial College London<br />
-					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
+					Senior Data Analyst @ Accor <br />
+					BSc Physics, Imperial College London<br /></h1>
+
 				</div>
 			</header>
 
