--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profile_pic.png" alt="" /></a>
 					<h1><strong>Emile Gill</strong><br />
-					Senior Data Analyst @ Accor <br />
+					Senior Data Analyst @ Accor; <br />
 					BSc Physics, Imperial College London<br /></h1>
 
 				</div>
