Customising content, adding CV and dark theme toggle

--- a/index.html
+++ b/index.html
@@ -13,14 +13,35 @@
 	</head>
 	<body class="is-preload">
 
+		<script>
+			function darkTheme() {
+				var element = document.body;
+				element.classList.toggle("dark-mode");
+			}
+		</script>
+
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/profile_pic.png" alt="" /></a>
-					<h1><strong>Emile Gill</strong><br />
-					Senior Data Analyst @ Accor; <br />
-					BSc Physics, Imperial College London<br /></h1>
+					<h1>
+						<strong>Emile Gill</strong>
+					</h1>
+					<h1>
+						Senior Data Analyst @ Accor
+					</h1>
+					<h1>
+						BSc Physics, Imperial College London<br>
+					</h1>
 
+				</div>
+				<div class="col-6 col-12-small">
+					<input
+					type="checkbox"
+					id="dark-theme"
+					name="dark-theme"
+					onclick="darkTheme()">
+					<label for="dark-theme">Dark theme</label>
 				</div>
 			</header>
 
@@ -33,8 +54,20 @@
 							<h2>About me</h2>
 						</header>
 						<p>Passionate about leveraging data and programming to solve business problems. BSc Physics Imperial College London. Experience with: Python (pandas, numpy, selenium, requests, beautiful soup); VBA; data manipulation, cleaning, analysis, visualisation; web scraping.</p>
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+							<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<!-- <li><a href="#" class="button primary">Learn More</a></li> -->
+							<li>
+								<a
+								href="/files/CV__Emile_Gill.pdf"
+								download="CV__Emile_Gill"
+								class="button primary icon solid fa-download">
+								Download CV</a></li>
 						</ul>
 					</section>
 
@@ -43,42 +76,27 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a 
+								href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/groceries.jpg"
+									alt="Photo by nrd on Unsplash" />
+								</a>
+								<a 
+								href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
+								target="_blank">
+									Finding a Grocery Delivery Slot the Smart Way
+								</a>
+								<p>Using Python, Heroku and Twilio to scrape data from a grocery website’s API and get a text notification when slots become available.</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="#" class="button primary">Full Portfolio</a></li>
 						</ul>
 					</section>
 
-				<!-- Three -->
+				<!-- Three
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -114,11 +132,11 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Four -->
-				<!--
-					<section id="four">
+				
+					<!-- <section id="four">
 						<h2>Elements</h2>
 
 						<section>
@@ -432,24 +450,24 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</section>
 
 					</section>
-				-->
 
-			</div>
+
+			</div> -->
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+						<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
-			</footer>
+			</footer> 
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
