Moving icons, adding new blog posts, changing About Me

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/profile_pic.png" alt="" /></a>
+					<a href="#" class="image avatar" style="width:25%;">
+						<img src="images/profile_pic.png" alt="" />
+					</a>
 					<h1>
 						<strong>Emile Gill</strong>
 					</h1>
@@ -47,7 +49,12 @@
 					<h1>
 						BSc Physics, Imperial College London<br>
 					</h1>
-
+					<ul class="icons" style="font-size: 1.5rem;">
+						<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+						<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
 				</div>
 				<div class="col-6 col-12-small">
 					<input
@@ -67,13 +74,24 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>Passionate about leveraging data and programming to solve business problems. BSc Physics Imperial College London. Experience with: Python (pandas, numpy, selenium, requests, beautiful soup); VBA; data manipulation, cleaning, analysis, visualisation; web scraping.</p>
-						<ul class="icons">
+						<p>
+							I graduated from Imperial College London with a BSc in Physics in 2018.
+							Subsequently, I joined Accor's Northern Europe Head Office in London as a Data Analyst,
+							where I'm currently working as a Senior Data Analyst. I'm an ardent autodidact,
+							passionate about all things Data Science and programming, and love to share my
+							projects and ideas on my Medium blog
+							<a href="https://medium.com/@emilegill743" target="_blank">
+								@emilegill743
+							</a>.
+							You can check out my recent work below 😉
+						</p>
+						<!-- <p>Passionate about leveraging data and programming to solve business problems. BSc Physics Imperial College London. Experience with: Python (pandas, numpy, selenium, requests, beautiful soup); VBA; data manipulation, cleaning, analysis, visualisation; web scraping.</p> -->
+						<!-- <ul class="icons" style="font-size: 1.5rem">
 							<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 							<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
+						</ul> -->
 						<ul class="actions">
 							<!-- <li><a href="#" class="button primary">Learn More</a></li> -->
 							<li>
@@ -105,10 +123,40 @@
 								</a>
 								<p>Using Python, Heroku and Twilio to scrape data from a grocery website’s API and get a text notification when slots become available.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a 
+								href="https://medium.com/@emilegill743/a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/elephant.jpg"
+									alt="Photo by nrd on Unsplash" />
+								</a>
+								<a 
+								href="https://medium.com/@emilegill743/a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+								target="_blank">
+								A Practical Guide to Getting Set-up with PostgreSQL 🐘
+								</a>
+								<p>Getting started with PostgreSQL, pgAdmin and SQLAlchemy for Python. Incorporate SQL into the heart of your Python projects.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a 
+								href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/web.jpg"
+									alt="Photo by nrd on Unsplash" />
+								</a>
+								<a 
+								href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
+								target="_blank">
+								Launch a Website for Free in 5 simple steps with GitHub Pages
+								</a>
+								<p>Get your personal portfolio website on the web in less than 10 minutes.</p>
+							</article>
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button primary">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three
@@ -472,12 +520,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<ul class="icons">
+					<!-- <ul class="icons">
 						<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 						<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
+					</ul> -->
 					<ul class="copyright">
 						<li>&copy; Emile Gill</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
