Updating link for PostgreSQL Set-up post

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
-								href="https://medium.com/@emilegill743/a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+								href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
 								class="image fit thumb"
 								target="_blank">
 									<img src="images/elephant.jpg"
 									alt="Photo by nrd on Unsplash" />
 								</a>
 								<a 
-								href="https://medium.com/@emilegill743/a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+								href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
 								target="_blank">
 								A Practical Guide to Getting Set-up with PostgreSQL 🐘
 								</a>
