Updating CV, title + resizing images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<strong>Emile Gill</strong>
 					</h1>
 					<h1>
-						Senior Data Analyst @ Accor
+						Analytics Manager @ Accor
 					</h1>
 					<h1>
 						BSc Physics, Imperial College London<br>
@@ -77,12 +77,17 @@
 						<p>
 							I graduated from Imperial College London with a BSc in Physics in 2018.
 							Subsequently, I joined Accor's Northern Europe Head Office in London as a Data Analyst,
-							where I'm currently working as a Senior Data Analyst. I'm an ardent autodidact,
-							passionate about all things Data Science and programming, and love to share my
+							where I'm currently working as Analytics Manager. An ardent autodidact,
+							I'm passionate about all things Data Science and programming, and love to share my
 							projects and ideas on my Medium blog
 							<a href="https://medium.com/@emilegill743" target="_blank">
 								@emilegill743
-							</a>.
+							</a>
+							, where I contribute to the publication
+							<a href="https://towardsdatascience.com/" target="_blank">
+								Towards Data Science
+							</a>
+							.
 							You can check out my recent work below 😉
 						</p>
 						<!-- <p>Passionate about leveraging data and programming to solve business problems. BSc Physics Imperial College London. Experience with: Python (pandas, numpy, selenium, requests, beautiful soup); VBA; data manipulation, cleaning, analysis, visualisation; web scraping.</p> -->
@@ -108,6 +113,7 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
 								href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
@@ -123,6 +129,39 @@
 								</a>
 								<p>Using Python, Heroku and Twilio to scrape data from a grocery website’s API and get a text notification when slots become available.</p>
 							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a 
+								href="https://towardsdatascience.com/getting-started-with-snowflake-%EF%B8%8F-35d395103034?source=friends_link&sk=9c2254fb76133d9e16ab298de912c671"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/snowflake.jpg"
+									alt="Image by Gerd Altmann from Pixabay" />
+								</a>
+								<a 
+								href="https://towardsdatascience.com/getting-started-with-snowflake-%EF%B8%8F-35d395103034?source=friends_link&sk=9c2254fb76133d9e16ab298de912c671"
+								target="_blank">
+								Getting Started with Snowflake ❄️
+								</a>
+								<p>Exploring the hype and delving into the free trial of Snowflake’s Cloud Data Platform</p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a 
+								href="https://towardsdatascience.com/getting-started-with-bokeh-effortlessly-elegant-interactive-data-visualisations-in-python-703249565bb3?source=friends_link&sk=97a8e8b2027dd2ca78f5956159a5466b"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/bokeh.jpg"
+									alt="Photo by Denise Johnson on Unsplash" />
+								</a>
+								<a 
+								href="https://towardsdatascience.com/getting-started-with-bokeh-effortlessly-elegant-interactive-data-visualisations-in-python-703249565bb3?source=friends_link&sk=97a8e8b2027dd2ca78f5956159a5466b"
+								target="_blank">
+								Getting started with Bokeh
+								</a>
+								<p>Effortlessly elegant interactive data visualisations in Python</p>
+							</article>
+
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
 								href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
@@ -153,6 +192,22 @@
 								</a>
 								<p>Get your personal portfolio website on the web in less than 10 minutes.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a 
+								href="https://towardsdatascience.com/setting-up-a-postgresql-instance-on-the-cloud-4ec4cf168239?source=friends_link&sk=f155e1ebacb1dc1996d579e01c595364"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/elephant-cloud.jpg"
+									alt="Image by mohamed Hassan from Pixabay" />
+								</a>
+								<a 
+								href="https://towardsdatascience.com/setting-up-a-postgresql-instance-on-the-cloud-4ec4cf168239?source=friends_link&sk=f155e1ebacb1dc1996d579e01c595364"
+								target="_blank">
+								Setting up a PostgreSQL instance on the cloud ⛅
+							</a>
+								<p>Comparing the “Free Tier” offerings of AWS, GCP and Heroku for setting up a cloud Postgres instance.</p>
+							</article>
+
 						</div>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button primary">Full Portfolio</a></li>
