Updating title and CV

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<strong>Emile Gill</strong>
 					</h1>
 					<h1>
-						Analytics Manager @ Accor
+						Lead Analytics Engineer @ Accor
 					</h1>
 					<h1>
 						BSc Physics, Imperial College London<br>
@@ -77,7 +77,7 @@
 						<p>
 							I graduated from Imperial College London with a BSc in Physics in 2018.
 							Subsequently, I joined Accor's Northern Europe Head Office in London as a Data Analyst,
-							where I'm currently working as Analytics Manager. An ardent autodidact,
+							where I'm currently working as Lead Analytics Engineer. An ardent autodidact,
 							I'm passionate about all things Data Science and programming, and love to share my
 							projects and ideas on my Medium blog
 							<a href="https://medium.com/@emilegill743" target="_blank">
