Adding notes and projects sections to site

--- a/index.html
+++ b/index.html
@@ -69,153 +69,208 @@
 		<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>About me</h2>
-						</header>
-						<p>
-							I graduated from Imperial College London with a BSc in Physics in 2018.
-							Subsequently, I joined Accor's Northern Europe Head Office in London as a Data Analyst,
-							where I'm currently working as Lead Analytics Engineer. An ardent autodidact,
-							I'm passionate about all things Data Science and programming, and love to share my
-							projects and ideas on my Medium blog
-							<a href="https://medium.com/@emilegill743" target="_blank">
-								@emilegill743
+				<!-- About Me -->
+				<section id="about_me">
+					<header class="major">
+						<h2>About me</h2>
+					</header>
+					<p>
+						I graduated from Imperial College London with a BSc in Physics in 2018.
+						Subsequently, I joined Accor's Northern Europe Head Office in London as a Data Analyst,
+						where I'm currently working as Lead Analytics Engineer. An ardent autodidact,
+						I'm passionate about all things Data Science and programming, and love to share my
+						projects and ideas on my Medium blog
+						<a href="https://medium.com/@emilegill743" target="_blank">
+							@emilegill743
+						</a>
+						, where I contribute to the publication
+						<a href="https://towardsdatascience.com/" target="_blank">
+							Towards Data Science
+						</a>
+						.
+						You can check out some of my recent work below 😉
+					</p>
+					<!-- <ul class="icons" style="font-size: 1.5rem">
+						<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+						<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul> -->
+					<ul class="actions">
+						<!-- <li><a href="#" class="button primary">Learn More</a></li> -->
+						<li>
+							<a
+							href="/files/CV__Emile_Gill.pdf"
+							download="CV__Emile_Gill"
+							class="button primary icon solid fa-download"
+							onclick="trackCVDownload()">
+							Download CV</a></li>
+					</ul>
+				</section>
+				
+				<!-- Navigation -->
+				<section id="navigation">
+					<div class="row">
+						<article class="col-4 col-12-xsmall work-item">
+							<a 
+							href="#blog_posts"
+							class="image fit thumb">
+								<img src="images/blog.jpg"
+								alt="Photo by Lukas Blazek on Unsplash" />
 							</a>
-							, where I contribute to the publication
-							<a href="https://towardsdatascience.com/" target="_blank">
-								Towards Data Science
+							<h2 style="text-align:center;">Blog Posts</h2>
+						</article>
+						<article class="col-4 col-12-xsmall work-item">
+							<a 
+							href="#projects"
+							class="image fit thumb">
+								<img src="images/projects.jpg"
+								alt="Photo by Markus Spiske on Unsplash" />
 							</a>
-							.
-							You can check out my recent work below 😉
-						</p>
-						<!-- <p>Passionate about leveraging data and programming to solve business problems. BSc Physics Imperial College London. Experience with: Python (pandas, numpy, selenium, requests, beautiful soup); VBA; data manipulation, cleaning, analysis, visualisation; web scraping.</p> -->
-						<!-- <ul class="icons" style="font-size: 1.5rem">
-							<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-							<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul> -->
-						<ul class="actions">
-							<!-- <li><a href="#" class="button primary">Learn More</a></li> -->
-							<li>
-								<a
-								href="/files/CV__Emile_Gill.pdf"
-								download="CV__Emile_Gill"
-								class="button primary icon solid fa-download"
-								onclick="trackCVDownload()">
-								Download CV</a></li>
-						</ul>
-					</section>
+							<h2 style="text-align:center;">Projects</h2>
+						</article>
 
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
-						<div class="row">
-
-							<article class="col-6 col-12-xsmall work-item">
-								<a 
-								href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
-								class="image fit thumb"
-								target="_blank">
-									<img src="images/groceries.jpg"
-									alt="Photo by nrd on Unsplash" />
-								</a>
-								<a 
-								href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
-								target="_blank">
-									Finding a Grocery Delivery Slot the Smart Way
-								</a>
-								<p>Using Python, Heroku and Twilio to scrape data from a grocery website’s API and get a text notification when slots become available.</p>
-							</article>
-
-							<article class="col-6 col-12-xsmall work-item">
-								<a 
-								href="https://towardsdatascience.com/getting-started-with-snowflake-%EF%B8%8F-35d395103034?source=friends_link&sk=9c2254fb76133d9e16ab298de912c671"
-								class="image fit thumb"
-								target="_blank">
-									<img src="images/snowflake.jpg"
-									alt="Image by Gerd Altmann from Pixabay" />
-								</a>
-								<a 
-								href="https://towardsdatascience.com/getting-started-with-snowflake-%EF%B8%8F-35d395103034?source=friends_link&sk=9c2254fb76133d9e16ab298de912c671"
-								target="_blank">
-								Getting Started with Snowflake ❄️
-								</a>
-								<p>Exploring the hype and delving into the free trial of Snowflake’s Cloud Data Platform</p>
-							</article>
-
-							<article class="col-6 col-12-xsmall work-item">
-								<a 
-								href="https://towardsdatascience.com/getting-started-with-bokeh-effortlessly-elegant-interactive-data-visualisations-in-python-703249565bb3?source=friends_link&sk=97a8e8b2027dd2ca78f5956159a5466b"
-								class="image fit thumb"
-								target="_blank">
-									<img src="images/bokeh.jpg"
-									alt="Photo by Denise Johnson on Unsplash" />
-								</a>
-								<a 
-								href="https://towardsdatascience.com/getting-started-with-bokeh-effortlessly-elegant-interactive-data-visualisations-in-python-703249565bb3?source=friends_link&sk=97a8e8b2027dd2ca78f5956159a5466b"
-								target="_blank">
-								Getting started with Bokeh
-								</a>
-								<p>Effortlessly elegant interactive data visualisations in Python</p>
-							</article>
-
-							<article class="col-6 col-12-xsmall work-item">
-								<a 
-								href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
-								class="image fit thumb"
-								target="_blank">
-									<img src="images/elephant.jpg"
-									alt="Photo by nrd on Unsplash" />
-								</a>
-								<a 
-								href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
-								target="_blank">
-								A Practical Guide to Getting Set-up with PostgreSQL 🐘
-								</a>
-								<p>Getting started with PostgreSQL, pgAdmin and SQLAlchemy for Python. Incorporate SQL into the heart of your Python projects.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a 
-								href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
-								class="image fit thumb"
-								target="_blank">
-									<img src="images/web.jpg"
-									alt="Photo by nrd on Unsplash" />
-								</a>
-								<a 
-								href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
-								target="_blank">
-								Launch a Website for Free in 5 simple steps with GitHub Pages
-								</a>
-								<p>Get your personal portfolio website on the web in less than 10 minutes.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a 
-								href="https://towardsdatascience.com/setting-up-a-postgresql-instance-on-the-cloud-4ec4cf168239?source=friends_link&sk=f155e1ebacb1dc1996d579e01c595364"
-								class="image fit thumb"
-								target="_blank">
-									<img src="images/elephant-cloud.jpg"
-									alt="Image by mohamed Hassan from Pixabay" />
-								</a>
-								<a 
-								href="https://towardsdatascience.com/setting-up-a-postgresql-instance-on-the-cloud-4ec4cf168239?source=friends_link&sk=f155e1ebacb1dc1996d579e01c595364"
-								target="_blank">
-								Setting up a PostgreSQL instance on the cloud ⛅
+						<article class="col-4 col-12-xsmall work-item">
+							<a 
+							href="https://www.emilegill.com/emile-notes/"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/notes.jpg"
+								alt="Photo by Jan Kahánek on Unsplash"
+								" />
 							</a>
-								<p>Comparing the “Free Tier” offerings of AWS, GCP and Heroku for setting up a cloud Postgres instance.</p>
-							</article>
+							<h2 style="text-align:center;">Course Notes</h2>
+						</article>
+					</div>
+					
+				</section>
 
-						</div>
-						<!-- <ul class="actions">
-							<li><a href="#" class="button primary">Full Portfolio</a></li>
-						</ul> -->
-					</section>
+				<section id="blog_posts">
+					<h2>Blog Posts</h2>
+					<div class="row">
 
-				<!-- Three
-					<section id="three">
+						<article class="col-6 col-12-xsmall work-item">
+							<a 
+							href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/groceries.jpg"
+								alt="Photo by nrd on Unsplash" />
+							</a>
+							<a 
+							href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
+							target="_blank">
+								Finding a Grocery Delivery Slot the Smart Way
+							</a>
+							<p>Using Python, Heroku and Twilio to scrape data from a grocery website’s API and get a text notification when slots become available.</p>
+						</article>
+
+						<article class="col-6 col-12-xsmall work-item">
+							<a 
+							href="https://towardsdatascience.com/getting-started-with-snowflake-%EF%B8%8F-35d395103034?source=friends_link&sk=9c2254fb76133d9e16ab298de912c671"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/snowflake.jpg"
+								alt="Image by Gerd Altmann from Pixabay" />
+							</a>
+							<a 
+							href="https://towardsdatascience.com/getting-started-with-snowflake-%EF%B8%8F-35d395103034?source=friends_link&sk=9c2254fb76133d9e16ab298de912c671"
+							target="_blank">
+							Getting Started with Snowflake ❄️
+							</a>
+							<p>Exploring the hype and delving into the free trial of Snowflake’s Cloud Data Platform</p>
+						</article>
+
+						<article class="col-6 col-12-xsmall work-item">
+							<a 
+							href="https://towardsdatascience.com/getting-started-with-bokeh-effortlessly-elegant-interactive-data-visualisations-in-python-703249565bb3?source=friends_link&sk=97a8e8b2027dd2ca78f5956159a5466b"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/bokeh.jpg"
+								alt="Photo by Denise Johnson on Unsplash" />
+							</a>
+							<a 
+							href="https://towardsdatascience.com/getting-started-with-bokeh-effortlessly-elegant-interactive-data-visualisations-in-python-703249565bb3?source=friends_link&sk=97a8e8b2027dd2ca78f5956159a5466b"
+							target="_blank">
+							Getting started with Bokeh
+							</a>
+							<p>Effortlessly elegant interactive data visualisations in Python</p>
+						</article>
+
+						<article class="col-6 col-12-xsmall work-item">
+							<a 
+							href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/elephant.jpg"
+								alt="Photo by nrd on Unsplash" />
+							</a>
+							<a 
+							href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+							target="_blank">
+							A Practical Guide to Getting Set-up with PostgreSQL 🐘
+							</a>
+							<p>Getting started with PostgreSQL, pgAdmin and SQLAlchemy for Python. Incorporate SQL into the heart of your Python projects.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a 
+							href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/web.jpg"
+								alt="Photo by nrd on Unsplash" />
+							</a>
+							<a 
+							href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
+							target="_blank">
+							Launch a Website for Free in 5 simple steps with GitHub Pages
+							</a>
+							<p>Get your personal portfolio website on the web in less than 10 minutes.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a 
+							href="https://towardsdatascience.com/setting-up-a-postgresql-instance-on-the-cloud-4ec4cf168239?source=friends_link&sk=f155e1ebacb1dc1996d579e01c595364"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/elephant-cloud.jpg"
+								alt="Image by mohamed Hassan from Pixabay" />
+							</a>
+							<a 
+							href="https://towardsdatascience.com/setting-up-a-postgresql-instance-on-the-cloud-4ec4cf168239?source=friends_link&sk=f155e1ebacb1dc1996d579e01c595364"
+							target="_blank">
+							Setting up a PostgreSQL instance on the cloud ⛅
+						</a>
+							<p>Comparing the “Free Tier” offerings of AWS, GCP and Heroku for setting up a cloud Postgres instance.</p>
+						</article>
+
+					</div>
+				</section>
+
+				<section id="projects">
+					<h2>Projects</h2>
+					<div class="row">
+
+						<article class="col-6 col-12-xsmall work-item">
+							<a 
+							href="http://covid19-bokeh-app.emilegill.com"
+							class="image fit thumb"
+							target="_blank">
+								<img src="images/bokeh_app.jpg"
+								alt="Covid-19 Bokeh App" />
+							</a>
+							<a 
+							href="http://covid19-bokeh-app.emilegill.com"
+							target="_blank">
+								Covid-19 Bokeh App
+							</a>
+							<p>An interactive app implementing Python's Bokeh library that I've used to keep tabs on the progression of the pandemic.</p>
+						</article>
+
+					</div>
+				</section>
+
+				<!-- Three -->
+					<!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -568,8 +623,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</section>
 
 					</section>
-
-
 			</div> -->
 
 		<!-- Footer -->
